css/style.css
/* -----------------------------------------------------------------------------
                          Brian Wynn Portfolio
----------------------------------------------------------------------------- */
/* Author: brian wynn */

/* Title: Porfolio v.2.1 */

/* Description: A responsive portfolio site to showcase some of my front-end web
   projects. Utilizing some third-party cdn hosts such as google fonts and
   and jquery. This project's layout and template are flexbox based, as its
   flexible properties are idea for template layouts, and is widely accepted
   with some vendor prefixes in a majority of browsers. */

/* Targeted Browsers:   Safari 8/ OS X 10.10
                        Firefox 39/OS X 10.10/ Win 7/ Win 8.1
                        Chrome 42+/ OS X 10.10/ Win 7/ Win 8.1
                        IE 11/ Win 8.1 */

/* Google fonts html link: <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>

/* =============================================================================
    Global Styles
============================================================================= */

/* Wipe any browser defaults out for easy restyling */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  height: 100%;
}

html,
body,
div#portfolio,
.prt-shell-content {
  width: 100%;
}

body {
  font: 18px 'Droid Sans', Helvetica, sans-serif;
  color: #333;
  background-color: #F5F5F1;
}

h1 {
  font-size: 2.2em;
}

h3 {
  font-size: 1.6em;
}

a {
  text-decoration: none;
  color: #FCFCF8;
}

a:hover {
  text-decoration: underline;
}




/* =============================================================================
    Layout/Shell Styles
============================================================================= */

.prt-shell-header, .prt-shell-content, .prt-shell-nav {
  width: 100%;
}
.prt-shell-header {
  background-color: #333;
  overflow: hidden;
}

.prt-shell-header,
.prt-shell-links {
  height: 3em;
}

.prt-shell-links {
  width: 40%;
}
.prt-shell-content {
  background-color: #FCFCF8;
  position: relative;
  z-index: 1;
}
.prt-shell-portrait {
  position: relative;
  display: inline-block;
  width: 100%;
  float: left;
  max-width: 18em;
  height: 18em;
  margin: 3em 2em;
  box-sizing: border-box;
  background-color: #444;
}
.prt-shell-nav {
  padding: 1em 0;
  box-sizing: border-box;
  height: 15em;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}
.prt-shell-modal {
  position: absolute;
  top: 10%;
  width: 80%;
  border-radius: 3px;
  min-height: 500px;
  left: 10%;
  z-index: 3;
  display: none;
}

/* =============================================================================
    Header Styles
============================================================================= */
.prt-shell-links > ul {
  list-style-type: none;
  height: inherit;
}
.prt-shell-links > ul > li {
  display: inline-block;
  padding: .8em;
}

.prt-shell-links > ul > li > a:hover {
  color: #D6D6D3;
}

/* =============================================================================
    Content Styles
============================================================================= */

#content-container h1,
#content-container h3 {
  padding: 1rem;
}

#content-container h1 {
  padding-top: 1.2em;
}

#content-container {
  width: 80%;
  margin: 0 auto;
  overflow: hidden;
  box-sizing: border-box;
}

.prt-shell-portrait {
  background: url("../img/brian.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  border-radius: .1em;
}

div#content-container > article {
  padding: 1em 1em 2em;
}

#content-container > article > p {
  font-size: 1.1em;
}

#sub-header h3 {
  padding: 0 1.2em;
  float: right;
}

.prt-shell-nav h1 {
  font-size: 1.6em;
  padding: .3em;
  position: relative;
  z-index: 2;
  background-color: rgba(0,0,0, .5);
  text-shadow: 2px 2px 3px #555;
  -webkit-transition: .4s ease;
  -moz-transition: .4s ease;
  transition: .4s ease;
}

.prt-shell-prj-1, .prt-shell-prj-2, .prt-shell-prj-3, .prt-shell-prj-4 {
  max-width: 24%;
  -webkit-flex-grow: 1;
  flex-grow: 1;
  height: 100%;
  cursor: pointer;
  background-color: #333;
  color: #FCFCF8;
  background-repeat: no-repeat;
  background-size: cover;
  bacground-position: center;
  border-radius: 2px;
  -webkit-transition: .4s background ease-in-out;
  -moz-transition: .4s background ease-in-out;
  transition: .4s background ease-in-out;
}

.prt-shell-prj-1 {
  background-image: url("../img/waves_tile.png");
}

.prt-shell-prj-2 {
  background-image: url("../img/norgrendesign_tile.png");
}

.prt-shell-prj-3 {
  background-image: url("../img/southwest_tile.png");
}

.prt-shell-prj-4 {
  background-image: url("../img/sandbox_tile.png");
}

.prt-shell-prj-1:hover, .prt-shell-prj-2:hover, .prt-shell-prj-3:hover, .prt-shell-prj-4:hover {
  background-color: #9f9f9f;
  color: yellow;
}

#sub-header {
  padding: 2em 0;
  color: #333;
}

#lower-divider {
  background-color: #AAA9A3;
  color: #FCFCF8;
  text-shadow: 2px 2px 2px #999;
  height: inherit;
}

/* =============================================================================
    Modal Styles
============================================================================= */
.prt-shell-modal {
  background-color: #F5F5F1;
  box-shadow: 1px 1px 15px 3px #333
}

#closeBtn {
  height: 30px;
  width: 30px;
  display: inline-block;
  border: 3px solid #555;
  border-radius: 50%;
  background-color: #888;
  position: relative;
  top: -.8em;
  left: -.8em;
  cursor: pointer;
  -webkit-transition: .3s background ease-out;
  -moz-transition: .3s background ease-out;
  transition: .3s background ease-out;
}

#closeBtn:before {
  background: #555;
  content: "";
  height: 26px;
  width: 3px;
  top: -2px;
  left: 10px;
  display: block;
  position: relative;
  -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
      -o-transform: rotate(90deg);
  -webkit-transition: .3s ease-out;
     -moz-transition: .3s ease-out;
          transition: .3s ease-out;
}

#closeBtn:hover:before {
  -webkit-transform: rotate(135deg);
    -moz-transform: rotate(135deg);
     -ms-transform: rotate(135deg);
      -o-transform: rotate(135deg);
}

#closeBtn:after {
  background: #555;
  content: "";
  height: 26px;
  width: 3px;
  top: -27px;
  left: 10px;
  display: block;
  position: relative;
  -webkit-transform: rotate(90deg);
    -moz-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
      -o-transform: rotate(90deg);
  -webkit-transition: .3s ease-out;
     -moz-transition: .3s ease-out;
          transition: .3s ease-out;
}

#closeBtn:hover:after {
  -webkit-transform: rotate(45deg);
    -moz-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
      -o-transform: rotate(45deg);
}

#closeBtn:hover {
  background-color: #F5F5F1;
}

#mobileClose {
  display: none;
}

article.modal-featured-project {
  position: relative;
  top: -1.8em;
}

figure.modal-img,
.modal-header {
    float: left;
}

figure.modal-img {
  height: 250px;
  width: 300px;
  display: inline-block;
  margin: 1em;
  background-image: url("../img/sw_layout.png");
  background-position: center;
  background-size: 460px;
  background-repeat: no-repeat;
  position: relative;
}

.modal-header {
  display: inline-block;
  padding: .4em 0;
  font-size: 1.8em;
}

.modal-copy {
  padding: 4.5em .5em 2em;
}

.project-containers {
  width: 100%;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row wrap;
  flex-flow: row wrap;
  -webkit-align-content: stretch;
  align-content: stretch;
  -webkit-justify-content: center;
  justify-content: center;
}

.project-containers section {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  display: inline-block;
  padding: 0 1em 1em;
  box-sizing: border-box;
}

.project-containers section > h3 {
  background-color: #999;
  text-align: center;
}

.project-containers section > ul {
  padding: .2em 1em;
}

.project-containers section.browsers > ul {
  list-style-type: none;
}

.project-containers section > ul > li {
  margin: .5em 0;
}

.project-containers section.browsers > ul > li.chrome {
  background: url("../img/chrome-icon.svg");
}

.project-containers section.browsers > ul > li.firefox {
  background: url("../img/firefox-icon.svg");
}

.project-containers section.browsers > ul > li.safari {
  background: url("../img/safari-icon.svg");
}

.project-containers section.browsers > ul li.chrome,
.project-containers section.browsers > ul > li.firefox,
.project-containers section.browsers > ul > li.safari,
.project-containers section.browsers > ul > li.ie {
  background-repeat: no-repeat;
  padding-left: 1.39em;
}

.project-containers section > ul > li > a {
  color: #333;
}

.project-containers section.project-links ul {
  list-style-type: none;
  padding: 0;
}

.modal-background {
  height: 100%;
  width: 100%;
  position: fixed;
  top: 0;
  background-color: #333;
  opacity: .9;
  z-index: 2;
  display: none;
  cursor: pointer;
}

/* =============================================================================
    Media Queries
============================================================================= */
@media only screen and (max-width: 800px) {

  /* Shell Styles */
  html,
  body,
  div#portfolio,
  .prt-shell-content {
    height: 100em;
  }

  .prt-shell-links {
    width: 50%;
  }

  #content-container {
    width: 100%;
    height: auto;
  }

  #content-container h1,
  #content-container h3 {
    text-align: center;
  }

  .prt-shell-portrait {
    display: block;
    margin: 2em auto;
    float: none;
  }

  .prt-shell-content > article {
    width: 98%;
  }

  div#content-container > article {
    padding: 2em;
  }

  .prt-shell-prj-1, .prt-shell-prj-2, .prt-shell-prj-3, .prt-shell-prj-4 {
    max-width: none;
    width: 90%;
    height: 20em;
    margin: 1em;
    padding: 0;
  }

  figure.prj-img {
    height: 80%;
  }

  #closeBtn {
    display: none;
  }

  #mobileClose {
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    background-color: #888;
    padding: 0 .2em;
    color: #FCFCF8;
    z-index: 4;
    cursor: pointer;
    -webkit-transition: .3s background ease-out;
    -moz-transition: .3s background ease-out;
    transition: .3s background ease-out;
  }

  #mobileClose:hover {
    background-color: #444;
  }

  .prt-shell-modal {
    top: 0;
    left: 0;
    width: 100%;
  }

  figure.modal-img {
    height: 250px;
    width: 80%;
    background-size: contain;
    display: block;
    margin: 3em auto 1em;
  }

  figure.modal-img,
  .modal-header {
    float: none;
    width: 100%;
  }

  .modal-header {
    margin: .5em;
  }

  .modal-header,
  .modal-copy {
    display: block;
    padding: 0;
    box-sizing: border-box;
  }

  .modal-copy {
    margin: 1em;
  }

  .project-containers section {
    width: 100%;
  }

} /* end of media query */

